# tools

./: README.md
public/mcp-email/: .env.example  .gitignore  README.md  index.html  pyproject.toml  start.sh
public/mcp-email/src/mcp_email/: approval.py  cli.py  config.py  dispatcher.py  models.py  policy.py  rate_limits.py  server.py  smtp_client.py  store.py
public/mcp-email/src/mcp_email/tools/: __init__.py  email.py
public/mcp-email/tests/: test_cli.py  test_config.py  test_dispatcher.py  test_models.py  test_policy.py  test_smoke.py  test_smtp_client.py  test_store.py  test_tools.py
public/nearpass/: .gitignore  Cargo.toml  PROJECT.md  README.md  index.html
public/nearpass/assets/: qwerty.kdbx
public/nearpass/docs/: candidate_search_technical_report.md  exact_ordered_streaming_candidate_enumeration_report.md  feeder_memory_efficient_technical_report.md  streaming-sorted-enumeration-brief.md
public/nearpass/examples/: worker_example.rs
public/nearpass/pipelined/: Cargo.toml
public/nearpass/pipelined/examples/: worker_example.rs
public/nearpass/pipelined/src/: engine.rs  lib.rs  worker.rs
public/nearpass/pipelined/tests/: worker_tests.rs
public/nearpass/rust/: Cargo.toml  HANDOFF.md  README.md
public/nearpass/rust/benches/: search_bench.rs
public/nearpass/rust/src/: config.rs  keyboard.rs  lib.rs  mutations.rs  search.rs
public/nearpass/rust/tests/: search_tests.rs
public/nearpass/src/: config.rs  engine.rs  enumerator.rs  lib.rs  strategy.rs  streaming.rs  worker.rs
public/nearpass/tests/: trait_tests.rs  worker_tests.rs
(+12 files in other folders)
