[package]
name = "nearpass"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4", features = ["derive"] }
keepass = { version = "0.10.6", features = ["save_kdbx4"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
blake3 = "1"
crossbeam-channel = "0.5"
ctrlc = "3"

[[bin]]
name = "enumerate"
path = "src/bin/enumerate.rs"

[[bin]]
name = "crack"
path = "src/bin/crack.rs"
